--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,33 @@
-.row.limit {
-  max-height:720px;
-  max-width:404px;
-  overflow:hidden;
-}
 
+/* Remove fullscreen button
+-------------------------------------------------- */
 .vjs-fullscreen-control {
 	visibility:hidden;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+}
+
+// Class
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
