--- a/templates/video.html
+++ b/templates/video.html
@@ -80,11 +80,10 @@
       {% endif %}
 
       </div>
-
-
-      <footer class="footer">
-        <p>© Slinger 2016</p>
-      </footer>
+    
+    <footer class="footer container text-xs-center">
+        <span class="text-muted">© Slinger 2016</span>
+    </footer>
 
 </div>
 
