--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,9 +25,15 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-// Class
 .center-block {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.wordwrap
+{
+/* wrap long text and urls */
+word-wrap: break-word; /* IE 5+ */
+} 
